# ComfyUI-Majoor-ProjectSettings

./: .eslintrc.json  .gitignore  AGENTS.md  README.md  __init__.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.strict.json
.claude/: settings.local.json
docs/: COMFYUI_INTEGRATION_AUDIT.md  TYPESCRIPT_MIGRATION_PLAN.md  project_structure.json
js/: majoor_project_settings.d.ts  majoor_project_settings.js  majoor_project_settings.js.map  state_manager.d.ts  state_manager.js  state_manager.js.map  ui_components.d.ts  ui_components.js  ui_components.js.map
js/mjr/: api.d.ts  api.js  api.js.map  dialog.d.ts  dialog.js  dialog.js.map  dom.js  dom.js.map  graph.d.ts  graph.js  graph.js.map  log.d.ts  log.js.map  model_contribution_dialog.js  model_contribution_dialog.js.map  model_downloader.d.ts  model_downloader.js  model_downloader.js.map  model_fixer.d.ts  model_fixer.js  model_fixer.js.map  patch.d.ts  patch.js  patch.js.map  toast.d.ts  toast.js  toast.js.map  topbar_badge.js.map  topbar_project_badge.js  ui_model_downloader_dialog.d.ts  ui_model_downloader_dialog.js  ui_model_downloader_dialog.js.map  ui_model_fixer_dialog.d.ts  utils.d.ts  (+7 more)
server/: audit_logger.py  model_aliases.py  model_downloader_routes.py  model_fixer_routes.py  model_registry.py  model_registry_routes.py  model_search_api.py  model_search_modelscope.py  model_sources_store.py  populate_registry.py  project_routes.py  project_store.py  route_utils.py  validators.py
src/: majoor_project_settings.ts  state_manager.ts  ui_components.ts
tests/: test_validators.py
(+64 files in other folders)
